[gd_scene load_steps=83 format=2]

[ext_resource path="res://spritesheet_player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Customer.gd" type="Script" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]
[ext_resource path="res://key_placeholder.png" type="Texture" id=6]
[ext_resource path="res://Item.gd" type="Script" id=7]
[ext_resource path="res://highlight.png" type="Texture" id=8]
[ext_resource path="res://CarriedItem.gd" type="Script" id=9]
[ext_resource path="res://spritesheet_customers.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 288, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 224, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 288, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 26 ), SubResource( 25 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "pick",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 43 ), SubResource( 42 ) ],
"loop": true,
"name": "carry",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "yeet",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "idlecarry",
"speed": 2.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": false,
"name": "jumpcarry",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 35 )

[sub_resource type="RectangleShape2D" id=13]

[sub_resource type="QuadMesh" id=14]
size = Vector2( 800, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 400, 5 )

[sub_resource type="QuadMesh" id=16]
size = Vector2( 200, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 100, 5 )

[sub_resource type="QuadMesh" id=18]
size = Vector2( 20, 40 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 300 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 0, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 32, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 10 )
region = Rect2( 64, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 10 )
region = Rect2( 96, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 10 )
region = Rect2( 128, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 160, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 192, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 10 )
region = Rect2( 224, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 256, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 288, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 32, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 10 )
region = Rect2( 0, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 10 )
region = Rect2( 64, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 10 )
region = Rect2( 96, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 10 )
region = Rect2( 128, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 10 )
region = Rect2( 160, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 10 )
region = Rect2( 192, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 10 )
region = Rect2( 224, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 10 )
region = Rect2( 256, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 10 )
region = Rect2( 288, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 10 )
region = Rect2( 32, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 10 )
region = Rect2( 0, 320, 32, 32 )

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 58 ), SubResource( 57 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 68 ), SubResource( 67 ) ],
"loop": true,
"name": "carry",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=20]

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.894118, 0.878431, 0.878431, 1 )

[sub_resource type="RectangleShape2D" id=22]

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 394.25, 508.75 )
collision/safe_margin = 0.33
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "jumpcarry"

[node name="BodyCollision" type="CollisionShape2D" parent="Player"]
shape = SubResource( 12 )

[node name="CarriedItem" type="Area2D" parent="Player"]
position = Vector2( 16.25, -3.75 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CarriedItem"]
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="Player/CarriedItem"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 389, 585 )
__meta__ = {
"_edit_group_": true
}

[node name="FloorMesh" type="MeshInstance2D" parent="Floor"]
mesh = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 15 )

[node name="Shelf" type="StaticBody2D" parent="."]
position = Vector2( 92.5458, 478.33 )
__meta__ = {
"_edit_group_": true
}

[node name="ShelfMesh" type="MeshInstance2D" parent="Shelf"]
mesh = SubResource( 16 )

[node name="ShelfShape2D" type="CollisionShape2D" parent="Shelf"]
shape = SubResource( 17 )

[node name="Desk" type="StaticBody2D" parent="."]
position = Vector2( 719.999, 560.015 )
__meta__ = {
"_edit_group_": true
}

[node name="DeskMesh" type="MeshInstance2D" parent="Desk"]
mesh = SubResource( 18 )

[node name="DeskShape2D" type="CollisionShape2D" parent="Desk"]
shape = SubResource( 19 )

[node name="Customer" type="Area2D" parent="."]
position = Vector2( 742.683, 547.742 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CustomerSprite" type="AnimatedSprite" parent="Customer"]
scale = Vector2( 2, 2 )
frames = SubResource( 77 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="CustomerArea" type="CollisionShape2D" parent="Customer"]
scale = Vector2( 3, 3 )
shape = SubResource( 20 )

[node name="SpeechBubble" type="ColorRect" parent="Customer"]
visible = false
margin_left = -1.13275
margin_top = -61.7423
margin_right = 24.8672
margin_bottom = -37.7423
rect_rotation = 45.0
color = Color( 0.894118, 0.878431, 0.878431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Customer/SpeechBubble"]
margin_left = -67.6784
margin_top = 52.6747
margin_right = 38.3216
margin_bottom = 83.6747
rect_rotation = -45.0
custom_styles/normal = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thank you son "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideTimer" type="Timer" parent="Customer/SpeechBubble"]
wait_time = 2.0
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 19.0703
margin_top = 15.8919
margin_right = 59.0703
margin_bottom = 29.8919
text = "00000"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="RigidBody2D" parent="."]
position = Vector2( 344.896, 503.231 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item"]
shape = SubResource( 22 )

[node name="ItemSprite" type="Sprite" parent="Item"]
z_index = 2
texture = ExtResource( 6 )

[node name="HighlightSprite" type="Sprite" parent="Item"]
visible = false
z_index = -1
texture = ExtResource( 8 )
[connection signal="area_entered" from="Customer" to="Customer" method="_on_Customer_area_entered"]
[connection signal="body_entered" from="Customer" to="Customer" method="_on_Customer_body_entered"]
[connection signal="takes_item" from="Customer" to="Player" method="_on_Customer_takes_item"]
[connection signal="timeout" from="Customer/SpeechBubble/HideTimer" to="Customer" method="_on_HideTimer_timeout"]
[connection signal="item_grabbed" from="Item" to="Player" method="_on_item_grabbed"]
